2007-02-01  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>

	* inst/CITATION: Get date/year and version from the package
	metadata.

2006-11-19  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>

	* DESCRIPTION (Version): New version is 1.3-0.

	* R/polyxtra.R (lines.polynomial): Add arguments 'xlim' and 'ylim'
	as suggested by Tamas K Papp <tpapp@Princeton.EDU>.

2006-11-18  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>

	* R/polyxtra.R: New function GCD() and LCM() for computing the
	greatest common divisor and least common multiple of a family of
	polynomials.

	* R/polybase.R (Summary.polynomial): Add sum and prod summary
	methods for polynomials.

	* R/polylist.R: Add coercion and test functions for polylists, as
	well as Summary, c, rep, unique, and subscript methods.

2006-11-16  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>

	* R/polyxtra.R (plot.polynomial): Sync code with docs.
	Spotted by Tamas K Papp <tpapp@Princeton.EDU>.

2006-09-09  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>

	* DESCRIPTION (Version): New version is 1.2-3.
	(Imports): Add graphics.

	* NAMESPACE: More missing imports.

2006-08-12  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>

	* DESCRIPTION (Version): New version is 1.2-2.

	* NAMESPACE: Add missing imports.

2006-06-26  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>

	* DESCRIPTION (Version): New version is 1.2-1.

	* inst/CITATION: Added.

2005-10-24  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>

	* DESCRIPTION (Version): New version is 1.2-0.

	* NAMESPACE: Added.

2004-06-22  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>

	* DESCRIPTION (Version): New version is 1.1-15.

	* man/as.function.polynomial.Rd:
	* man/integral.polynomial.Rd:
	Fix minor Rd syntax problems.

2004-04-23  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>

	* DESCRIPTION (Version): New version is 1.1-14.

	* R/polybase.R (Ops.polynomial): Fix logic in flow control for
	polynomial division and power, the first spotted by Kjetil
	Halvorsen <kjetil@acelerate.com>.
