@@ -1,6 +1,6 @@
 Package: polynom
-Version: 1.3-1
-Date: 2007-02-01
+Version: 1.3-2
+Date: 2007-04-22
 Title: A collection of functions to implement a class for univariate
  polynomial manipulations
 Description: A collection of functions to implement a class for univariate
@@ -11,4 +11,4 @@ Author: S original by Bill Venables <Bill.Venables@adelaide.edu.au>.
 Maintainer: Kurt Hornik <Kurt.Hornik@R-project.org>
 Imports: stats, graphics
 License: GPL
-Packaged: Thu Feb  1 14:54:16 2007; hornik
+Packaged: Sun Apr 22 11:13:07 2007; hornik
