@@ -1,4 +1,14 @@
+2007-04-22  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>
+
+	* DESCRIPTION (Version): New version is 1.3-2.
+
+	* R/polybase.R (as.function.polynomial): New version by BV which
+	avoids parsing and subsequent contextstack overflows for large
+	polynomials (spotted by Robin Hankin <r.hankin@noc.soton.ac.uk>).
+
 2007-02-01  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>
+
+	* DESCRIPTION (Version): New version is 1.3-1.
 
 	* inst/CITATION: Get date/year and version from the package
 	metadata.
